# serializer version: 1
# name: test_entities[water_heater.second_water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 31.0,
      'min_temp': 16.0,
      'operation_list': list([
        'auto',
        'heat',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.second_water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '4 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[water_heater.second_water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Second Water Heater',
      'max_temp': 31.0,
      'min_temp': 16.0,
      'operation_list': list([
        'auto',
        'heat',
        'off',
      ]),
      'operation_mode': 'heat',
      'supported_features': <WaterHeaterEntityFeature: 3>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 30.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.second_water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_entities[water_heater.water_heater-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 31.0,
      'min_temp': 16.0,
      'operation_list': list([
        'auto',
        'heat',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.water_heater',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'tado',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': '2 1',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[water_heater.water_heater-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'friendly_name': 'Water Heater',
      'max_temp': 31.0,
      'min_temp': 16.0,
      'operation_list': list([
        'auto',
        'heat',
        'off',
      ]),
      'operation_mode': 'auto',
      'supported_features': <WaterHeaterEntityFeature: 3>,
      'target_temp_high': None,
      'target_temp_low': None,
      'temperature': 65.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.water_heater',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
